hphp/hack/test/typecheck/refinements/union_dynamic.php.exp
File "union_dynamic.php", line 15, characters 3-13:
  ~S<int>
File "union_dynamic.php", line 17, characters 3-13:
  int
File "union_dynamic.php", line 25, characters 17-34:
Invalid argument (Typing[4110])
  File "union_dynamic.php", line 8, characters 21-27:
  Expected `dynamic`
  File "union_dynamic.php", line 25, characters 21-21:
  Type `S<string>` is not a subtype of `dynamic` under dynamic-aware subtyping
